# termy

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LAUNCH.md  PROGRESS.md  PROMPT.md  QUESTIONS.md  README.md
.claude/: settings.json
.claude/hooks/: audit-log.sh  guardrails.sh
Docs/: 01-ARCHITECTURE.md  02-TECH-STACK.md  03-BUILD-PHASES.md  04-CLIENT-SERVER-AND-AGENT-PROTOCOL.md  05-CONVENTIONS-AND-TESTING.md  06-GLOSSARY.md
crates/agentd/: Cargo.toml
crates/agentd/src/: lib.rs
crates/client-bin/: Cargo.toml
crates/client-bin/src/: main.rs  passthrough.rs
crates/fonts/: Cargo.toml
crates/fonts/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/pty/: Cargo.toml
crates/pty/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: colors.rs  keys.rs  lib.rs
crates/render/src/gpu/: atlas.rs  damage.rs  mod.rs
crates/server-bin/: Cargo.toml
crates/server-bin/src/: lib.rs
crates/vt/: Cargo.toml
crates/vt/src/: cell.rs  color.rs  grid.rs  lib.rs  parser.rs
