[package]
name    = "fonts"
version = "0.1.0"
edition = "2021"
# Phase 4: fontconfig font discovery + rustybuzz shaping + ab_glyph rasterization.
# Client-only; must never appear in server-bin dep tree.

[dependencies]
fontconfig = "0.11"
rustybuzz  = "0.20"
ab_glyph   = "0.2"
thiserror  = { workspace = true }
