[package]
name    = "render"
version = "0.1.0"
edition = "2021"
# Client-only — must never appear in server-bin's dependency tree.

[dependencies]
winit     = "0.30"
wgpu      = "29"
pollster  = "0.3"
bytemuck  = { version = "1", features = ["derive"] }
font8x8   = { version = "0.2", default-features = false }
fonts     = { path = "../fonts" }
vt        = { path = "../vt" }
protocol  = { path = "../protocol" }
thiserror = { workspace = true }
